# conscio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: build-web.yml  ci.yml  release.yml
deploy/grit-carry-state-false/: Caddyfile  config.toml.example  conscio.service
docs/: build_paper.sh  index.md  paper.css  paper.md  plan.md  runtime-state.md  v2-design.md  v3-design.md  vm.md
docs/figures/: README.md  action-competition.dot  action-competition.mmd  attention-weights.mmd  evaluation-ladder.dot  evaluation-ladder.mmd  runtime-loop.dot  runtime-loop.mmd  service-loop.dot  service-loop.mmd  theory-map.mmd
docs/launch/: announcement.md  known-limits.md  public-beta-launch.md  release-notes-public-beta.md  release-process.md
docs/public-beta/: api.md  configuration.md  dedicated-vm.md  memory.md  operations.md  (+3 more)
scripts/: check-docs-examples.sh  check-launch-readiness.sh  regen-config-example.py
systemd/: conscio.service
tests/: test_ablation.py  test_autonomy.py  test_backup_schedule.py  test_blocking.py  test_cli_tools.py  test_cognition.py  test_config_example.py  test_constraints.py  test_db_robustness.py  test_embeddings.py  test_engine.py  test_eval_battery.py  test_eval_embedder.py  test_eval_live_gate.py  test_eval_report.py  test_eval_runner.py  test_eval_scorers.py  test_eval_suites.py  test_http_hardening.py  test_llm_router.py  test_logging_setup.py  test_mcp.py  test_memory_decay_contradiction.py  test_memory_lifecycle.py  test_memory_v2.py  test_motivation.py  test_observability.py  test_prediction.py  test_quarantine.py  test_regressions.py  test_runtime.py  test_selfstate.py  test_service.py  test_service_concurrency.py  test_storage_locking.py  test_streaming.py  test_structured.py  test_subagent.py  test_tool_batch_authorization.py  test_tool_registry_boundary.py  (+25 more)
web/: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
(+314 files in other folders)
