[project]
name = "conscio"
version = "0.1.0"
description = "A consciousness harness for AI agents — Global Workspace Theory + structured self-reflection + stream-of-consciousness inner monologue"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
conscio = "conscio.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
