[project]
name = "conscio"
version = "0.1.0"
description = "A consciousness harness for AI agents — Global Workspace Theory + structured self-reflection + stream-of-consciousness inner monologue"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "openai>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyyaml>=6.0",
    "mcp>=1.9",
]

[project.scripts]
conscio = "conscio.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
conscio = ["static/**/*", "eval/battery/**/*.yaml"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"src/conscio/core/cognition.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["conscio"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
